PLANET-6670 Use core class for full alignment
Ref: https://jira.greenpeace.org/browse/PLANET-6670
Use same CSS as block-wide on align-full.
Ideally this should use the same class, but existing content with saved
HTML can't be updated easily.

Unfortunately works differently in the editor, so I expect some
adjustments may be needed.

--- a/assets/src/styles/blocks/HubspotForm/HubspotFormStyles.scss
+++ b/assets/src/styles/blocks/HubspotForm/HubspotFormStyles.scss
@@ -15,7 +15,7 @@
   background-position: center center;
   box-shadow: inset 0 0 0 100vw transparentize($grey-80, .45);
 
-  &.block-wide {
+  &.alignfull {
     width: 100vw;
     /* A better way is to add these changes into the WideBlocks stylesheet */
     margin-inline-start: calc(((100vw - 100%) / 2) * -1);
