--- a/templates/blocks/header.twig
+++ b/templates/blocks/header.twig
@@ -1,6 +1,6 @@
 {% if ( header_title ) %}
 	<div class="skewed-overlay"></div>
-	{% set page_header_show = ( header_subtitle or header_description or not hide_page_title_checkbox )  %}
+	{% set page_header_show = ( header_subtitle or header_description or not hide_page_title )  %}
 	<div class="page-header {% if not page_header_show %}page-header-hidden{% endif %}">
 		{% if ( background_image ) %}
 			<div class="page-header-background">
@@ -12,7 +12,7 @@
 			</div>
 		{% endif %}
 		<div class="container">
-			{% if hide_page_title_checkbox and ( post.issues_nav_data or campaigns ) %}
+			{% if not hide_page_title and ( post.issues_nav_data or campaigns ) %}
 				<div class="top-page-tags">
 					{% if ( post.issues_nav_data ) %}
 						<div class="tag-wrap issues">
@@ -49,10 +49,10 @@
 					{% endif %}
 				</div>
 			{% endif %}
-			{% if hide_page_title_checkbox %}
+			{% if not hide_page_title %}
 				<h1 class="page-header-title">{{ header_title|e('wp_kses_post')|raw }}</h1>
 			{% endif %}
-			{% if hide_page_title_checkbox and ( post.is_take_action_page ) %}
+			{% if not hide_page_title and ( post.is_take_action_page ) %}
 				{% include "blocks/share_buttons.twig" with {social:post.share_meta} %}
 			{% endif %}
 			{% if ( header_subtitle ) %}
