PLANET-6690 Make Button border transparent in editor when needed
 This is needed when a custom background color is selected, instead of one of our registered styles.

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -90,6 +90,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 
+  &.has-background {
+    border-color: transparent;
+  }
+
   html[dir="rtl"] & {
     line-height: 2.5;
   }
@@ -101,6 +105,10 @@
     border-color: $orange;
     color: $white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
+  }
+
+  &.has-background {
+    border-color: transparent;
   }
 }
 
