Remove unnecessary CSS specificity
For some reason people still think it's a good idea to make CSS many
times more specific than it needs to be.

This is a major pain when refactoring code. Especially if the HTML also
contains tons of unnecessary wrapper elements which could be handled
much better by using recent CSS on the actual semantic markup.

Because the CSS mimics this structure, both become much harder to change
without breaking the other.

Instead, please try to write CSS that is reusable in multiple
circumstances. With the model of mimicing your DOM tree in CSS
selectors, you basically guarantee that each feature will need its own
collection of huge and specific CSS for declaring essentially the same
rules.

--- a/templates/burger-menu-items.twig
+++ b/templates/burger-menu-items.twig
@@ -8,7 +8,7 @@
 		{% set link_ga_action = item.title %}
 	{% endif %}
 	<li class="burger-menu-item nav-item accordion-item {{ item.class }} {{ item == item.current ? 'active' : '' }}">
-		<div class="item-wrapper accordion-header" id="burger-menu-accordion-{{ targetId }}">
+		<div class="burger-menu-item-wrapper accordion-header" id="burger-menu-accordion-{{ targetId }}">
 			<a
 				class="nav-link"
 				href="{{ item.get_link }}"
@@ -24,8 +24,7 @@
 					data-bs-toggle="collapse"
 					data-bs-target="#menu-{{ targetId }}"
 					aria-expanded="false"
-					aria-controls="menu-{{ targetId }}"
-				/>
+					aria-controls="menu-{{ targetId }}"></button>
 			{% endif %}
 		</div>
 
