Use Query Loop on posts page if feature enabled
* This index template is only used on the posts page, which nobody
likely uses as it missed styles for the page width and a few more
things. I now added the same container as on pages.
* Check feature toggle for listing pages and use a listing page if
enabled.
* Quick workaround with <br> tags to fix topbar covering things.

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,7 +1,18 @@
 {% extends "base.twig" %}
-
 {% block content %}
-	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-	{% endfor %}
+	<div class="page-content container">
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		{{ query_loop|raw }}
+		{# Need to check as posts doesn't need to be assigned in context, it's always going to forward to get_posts() #}
+		{% if not query_loop %}
+			{% for post in posts %}
+				{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+			{% endfor %}
+		{% endif %}
+	</div>
 {% endblock %}
