PLANET-6695 Always show scroll bar in cookies settings
This fix will probably not work everywhere, in particular not in MacOS where scroll bars are shown/hidden based on system settings

--- a/assets/src/scss/layout/_cookies-settings.scss
+++ b/assets/src/scss/layout/_cookies-settings.scss
@@ -52,7 +52,7 @@
 
 .cookies-settings-details {
   max-height: 40vh;
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
   width: calc(100% + 2 * #{$sp-3});
   margin-inline-start: -$sp-3;
