PLANET-6734 Inherit color for links within headings
We don't want heading links to follow standalone links colors

--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -35,6 +35,13 @@ h6 {
   &.has-text-align-left {
     width: 100%;
   }
+
+  a,
+  a:hover,
+  a:active,
+  a:visited {
+    color: inherit;
+  }
 }
 
 h1 {
