--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -9,7 +9,7 @@
     }
   }
 
-  h3, h3 > a {
+  h3 {
     line-height: 1.6rem;
 
     --block-columns--column-heading-- {
@@ -28,10 +28,6 @@
         font-size: 1.5rem;
       }
     }
-  }
-
-  h3 > a:hover {
-    text-decoration: underline;
   }
 
   // Columns block, layout no-image.
