--- a/assets/src/styles/blocks/core-overrides/_media-text.scss
+++ b/assets/src/styles/blocks/core-overrides/_media-text.scss
@@ -1,4 +1,8 @@
 .wp-block-media-text {
+  &:not(.force-no-lightbox) img {
+    cursor: pointer;
+  }
+
   @media (max-width: 600px) {
     .wp-block-media-text__content {
       padding: 0;
