Add group variation for full block link
* Use first link inside the block and expand it to full width/height
* Give separate editor styles: a dashed border round the block to show the clickable area.
* Prevent conflict with pdf and external link styles, by using :before instead of :after.

--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -23,7 +23,6 @@
 
 // Other
 @import "blocks/WideBlocks";
-@import "blocks/Editor";
 
 .is-style-small-padding {
   padding: 8px;
@@ -58,3 +57,6 @@
 .is-style-roboto-font-family {
   font-family: $roboto;
 }
+
+// Variations
+@import "../variations/stretched-link";
