Change quotes of burger menu 18n strings
- Double to single quote

--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -2,12 +2,12 @@
 	<button
 			class="nav-menu-close"
 			type="button"
-			aria-label="{{ __( "Close navigation mobile menu", "planet4-master-theme" ) }}"
-			aria-expanded="false"
+			aria-label="{{ __( 'Close navigation mobile menu', 'planet4-master-theme' ) }}"
+å			aria-expanded="false"
 			data-bs-toggle="open"
 			data-bs-target="#nav-main">
     <span class="visually-hidden">
-      {{ __( "Close navigation mobile menu", "planet4-master-theme" ) }}
+      {{ __( 'Close navigation mobile menu', 'planet4-master-theme' ) }}
     </span>
 	</button>
 
@@ -20,7 +20,7 @@
 			<button
 					class="nav-languages-toggle"
 					type="button"
-					aria-label="{{ __( "Choose language", "planet4-master-theme" ) }}"
+					aria-label="{{ __( 'Choose language', 'planet4-master-theme' ) }}"
 					aria-expanded="false"
 					data-bs-toggle="open"
 					data-bs-target="#nav-languages"
@@ -52,7 +52,7 @@
 							data-ga-category="Menu Navigation"
 							data-ga-action="Home"
 							data-ga-label="{{ page_category }}">
-						{{ __( "Home", "planet4-master-theme" ) }}
+						{{ __( 'Home', 'planet4-master-theme' ) }}
 					</a>
 				</li>
 
@@ -76,7 +76,7 @@
 					data-ga-category="Menu Navigation"
 					data-ga-action="Donate"
 					data-ga-label="{{ page_category }}">
-				{{ __( "Make a donation", "planet4-master-theme" ) }}
+				{{ __( 'Make a donation', 'planet4-master-theme' ) }}
 			</a>
 		</div>
 	{% endif %}
