PLANET-6708: Fix page padding with mobile tabs menu
Ref: https://jira.greenpeace.org/browse/PLANET-6708

The rule adding a padding to a page without header is/became irrelevant
Fixing this rule brings back the proper padding

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -50,7 +50,7 @@ $min-height: 40px;
   }
 }
 
-.with-mobile-tabs + .page-content {
+.with-mobile-tabs ~ :not(.page-header) + .page-content {
   @include medium-and-less {
     padding-top: calc(#{$menu-height-small} + 50px);
   }
