--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -5,7 +5,7 @@
   margin-top: $sp-1;
   margin-bottom: $sp-2;
 
-  &:not(.force-no-lightbox) {
+  &:not(.force-no-lightbox) img {
     cursor: pointer;
   }
 
