--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -60,7 +60,7 @@
 					{% include "burger-menu-items.twig" with { menu: navbar_menu_items } %}
 				{% endif %}
 
-				{% if donate_menu_items is not empty and dropdown_menu %}
+				{% if donate_menu_items is not empty and donate_menu_items[0].children|length > 1 and dropdown_menu %}
 					{% include "burger-menu-items.twig" with { menu: donate_menu_items } %}
 				{% endif %}
 			</ul>
